--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="Amido.Testing.Specflow" version="1.0.0" targetFramework="net451" />
+  <package id="Amido.Testing.Specflow.Api" version="1.0.4" targetFramework="net451" />
   <package id="BatchFlow" version="0.5.3" targetFramework="net45" />
-  <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net45" />
-  <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net45" />
-  <package id="CsQuery" version="1.3.4" targetFramework="net45" />
-  <package id="FluentAssertions" version="3.1.229" targetFramework="net45" />
+  <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net451" />
+  <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="MathNet.Numerics" version="3.1.0" targetFramework="net45" />
   <package id="maventhought.commons" version="0.9.7" targetFramework="net45" />
@@ -15,11 +18,21 @@
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.22-beta" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.DependencyCreation" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net451" />
+  <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="Pluralizer" version="0.3.0.1" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net451" />
+  <package id="Should" version="1.1.20" targetFramework="net451" />
   <package id="SnooSharp" version="1.0.1" targetFramework="net45" />
-  <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
+  <package id="SpecFlow" version="1.9.0" targetFramework="net451" />
+  <package id="SpecFlow.Reporting.Json" version="0.5.0.38" targetFramework="net451" />
   <package id="Units" version="2014.1.17.1" targetFramework="net45" />
   <package id="UnitsNet" version="3.0.0" targetFramework="net45" />
 </packages>
