--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Hardware\Virtual\Deck.cs" />
     <Compile Include="Hardware\Virtual\DiceCup.cs" />
     <Compile Include="Hardware\Virtual\Dice.cs" />
+    <Compile Include="IoCDI\IIocContainer.cs" />
     <Compile Include="IO\Crc32.cs" />
     <Compile Include="IO\Extensions.cs" />
     <Compile Include="IO\File.cs" />
