--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -38,9 +38,6 @@
     <Reference Include="BigRationalLibrary">
       <HintPath>..\Universal\packages\BigRationalLibrary.1.0.0.0\lib\NETFramework40\BigRationalLibrary.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.Core">
-      <HintPath>..\Universal\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
     <Reference Include="CodeFluent.Runtime.Client">
       <HintPath>..\Universal\packages\CodeFluentRuntimeClient.1.0.0.772\lib\CodeFluent.Runtime.Client.dll</HintPath>
     </Reference>
@@ -59,9 +56,6 @@
     <Reference Include="Ninject.Extensions.ChildKernel">
       <HintPath>..\Universal\packages\Ninject.Extensions.ChildKernel.3.2.0.0\lib\net45-full\Ninject.Extensions.ChildKernel.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject.Extensions.ContextPreservation">
-      <HintPath>..\Universal\packages\Ninject.Extensions.ContextPreservation.3.2.0.0\lib\net45-full\Ninject.Extensions.ContextPreservation.dll</HintPath>
-    </Reference>
     <Reference Include="Ninject.Extensions.Conventions">
       <HintPath>..\Universal\packages\Ninject.Extensions.Conventions.3.2.0.0\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
     </Reference>
@@ -71,19 +65,10 @@
     <Reference Include="Ninject.Extensions.Factory">
       <HintPath>..\Universal\packages\Ninject.Extensions.Factory.3.2.1.0\lib\net45-full\Ninject.Extensions.Factory.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject.Extensions.Interception">
-      <HintPath>..\Universal\packages\Ninject.Extensions.Interception.3.2.0.0\lib\net45-full\Ninject.Extensions.Interception.dll</HintPath>
-    </Reference>
-    <Reference Include="Ninject.Extensions.NamedScope">
-      <HintPath>..\Universal\packages\Ninject.Extensions.NamedScope.3.2.0.0\lib\net45-full\Ninject.Extensions.NamedScope.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\Universal\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
-    <Reference Include="SpecFlow.Reporting.Json">
-      <HintPath>..\Universal\packages\SpecFlow.Reporting.Json.0.5.0.38\lib\net40\SpecFlow.Reporting.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity.Design" />
@@ -306,6 +291,7 @@
     <Compile Include="Measurement\Length\PlanckLengths.cs" />
     <Compile Include="Measurement\Time\AMorPM.cs" />
     <Compile Include="Measurement\Time\Attoseconds.cs" />
+    <Compile Include="Measurement\Time\BillionYears.cs" />
     <Compile Include="Measurement\Time\Centuries.cs" />
     <Compile Include="Measurement\Time\Day.cs" />
     <Compile Include="Measurement\Time\Hour.cs" />
