--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -210,7 +210,7 @@
     <Compile Include="Magic\Ioc.cs" />
     <Compile Include="Magic\NinjectIocContainer.cs" />
     <Compile Include="IO\Crc32.cs" />
-    <Compile Include="IO\Extensions.cs" />
+    <Compile Include="IO\IOExtensions.cs" />
     <Compile Include="IO\File.cs" />
     <Compile Include="Internet\Browser\Chrome.cs" />
     <Compile Include="Internet\Inet.cs" />
