--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,9 @@
 
 <packages>
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
+  <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net451" />
+  <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.1.0" targetFramework="net45" />
   <package id="maventhought.commons" version="0.9.7" targetFramework="net45" />
   <package id="MavenThought.Units" version="0.3.2" targetFramework="net45" />
