--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -287,7 +287,10 @@
     <Compile Include="Measurement\Time\Clocks\AMorPM.cs" />
     <Compile Include="Measurement\Time\Attoseconds.cs" />
     <Compile Include="Measurement\Time\Clocks\ClockExtensions.cs" />
-    <Compile Include="Measurement\Time\Clocks\IClock.cs" />
+    <Compile Include="Measurement\Time\Clocks\IStandardClock.cs" />
+    <Compile Include="Measurement\Time\Clocks\IHour.cs" />
+    <Compile Include="Measurement\Time\Clocks\IMinute.cs" />
+    <Compile Include="Measurement\Time\Clocks\ISecond.cs" />
     <Compile Include="Measurement\Time\Clocks\MomentInTimeClock.cs" />
     <Compile Include="Measurement\Time\Day.cs" />
     <Compile Include="Measurement\Time\Clocks\Hour.cs" />
