--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -292,7 +292,7 @@
     <Compile Include="Measurement\Time\Clocks\MomentInTimeClock.cs" />
     <Compile Include="Measurement\Time\Day.cs" />
     <Compile Include="Measurement\Time\Clocks\Hour.cs" />
-    <Compile Include="Measurement\Time\Clocks\IPartofaClock.cs" />
+    <Compile Include="Measurement\Time\Clocks\ClockPart.cs" />
     <Compile Include="Measurement\Time\ETACalculator.cs" />
     <Compile Include="Measurement\Time\Millisecond.cs" />
     <Compile Include="Measurement\Time\Clocks\Minute.cs" />
