--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -288,13 +288,12 @@
     <Compile Include="Measurement\Time\Attoseconds.cs" />
     <Compile Include="Measurement\Time\Clocks\ClockExtensions.cs" />
     <Compile Include="Measurement\Time\Clocks\IStandardClock.cs" />
-    <Compile Include="Measurement\Time\Clocks\IMinute.cs" />
+    <Compile Include="Measurement\Time\Clocks\Millisecond.cs" />
     <Compile Include="Measurement\Time\Clocks\MomentInTimeClock.cs" />
     <Compile Include="Measurement\Time\Day.cs" />
     <Compile Include="Measurement\Time\Clocks\Hour.cs" />
     <Compile Include="Measurement\Time\Clocks\ClockPart.cs" />
     <Compile Include="Measurement\Time\ETACalculator.cs" />
-    <Compile Include="Measurement\Time\Millisecond.cs" />
     <Compile Include="Measurement\Time\Clocks\Minute.cs" />
     <Compile Include="Measurement\Time\Month.cs" />
     <Compile Include="Measurement\Time\RoundTo.cs" />
