--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -288,6 +288,8 @@
     <Compile Include="Measurement\Time\Attoseconds.cs" />
     <Compile Include="Measurement\Time\Clocks\ClockExtensions.cs" />
     <Compile Include="Measurement\Time\Clocks\IStandardClock.cs" />
+    <Compile Include="Measurement\Time\Clocks\IStandardClockWithSmallUnits.cs" />
+    <Compile Include="Measurement\Time\Clocks\Microsecond.cs" />
     <Compile Include="Measurement\Time\Clocks\Millisecond.cs" />
     <Compile Include="Measurement\Time\Clocks\MomentInTimeClock.cs" />
     <Compile Include="Measurement\Time\Day.cs" />
