--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -269,6 +269,7 @@
     </Compile>
     <Compile Include="Maths\BigIntegerRange.cs" />
     <Compile Include="Maths\DoubleConverter.cs" />
+    <Compile Include="Maths\Number.cs" />
     <Compile Include="Maths\Votally.cs" />
     <Compile Include="Maths\VotallyD.cs" />
     <Compile Include="Measurement\Currency\AltCoinExtensions.cs" />
