--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -55,6 +55,9 @@
     <Reference Include="FluentAssertions.Core">
       <HintPath>packages\FluentAssertions.3.1.229\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Fractions">
+      <HintPath>..\Universal\packages\Fractions.1.1.0.0\lib\net40\Fractions.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject">
       <HintPath>packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
@@ -68,6 +71,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Speech" />
@@ -329,7 +333,7 @@
     <Compile Include="Linguistics\Page.cs" />
     <Compile Include="Persistence\PersistableSettings.cs" />
     <Compile Include="Security\Impersonator.cs" />
-    <Compile Include="Security\StringExtensionMethods.cs" />
+    <Compile Include="Security\SecurityExtensions.cs" />
     <Compile Include="Security\Encryption2.cs" />
     <Compile Include="Security\AESThenHMAC.cs" />
     <Compile Include="Measurement\Currency\BTC\Address.cs" />
