--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -273,6 +273,7 @@
     </Compile>
     <Compile Include="Maths\BigIntegerRange.cs" />
     <Compile Include="Maths\DoubleConverter.cs" />
+    <Compile Include="Maths\FractionSplit.cs" />
     <Compile Include="Maths\Number.cs" />
     <Compile Include="Maths\Votally.cs" />
     <Compile Include="Maths\VotallyD.cs" />
