--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,7 @@
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
+  <package id="Fractions" version="1.1.0.0" targetFramework="net451" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.20" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
