--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -316,6 +316,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Maths\BigIntegerRange.cs" />
+    <Compile Include="Maths\Class1.cs" />
     <Compile Include="Maths\MovingAverageCalculator.cs" />
     <Compile Include="Maths\DoubleConverter.cs" />
     <Compile Include="Maths\Number.cs" />
