--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="BigMath" version="0.4.2" targetFramework="net451" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net451" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net451" />
+  <package id="chi" version="0.1.1" targetFramework="net451" />
   <package id="CodeFluentRuntimeClient" version="1.0.0.772" targetFramework="net451" />
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FluentAssertions" version="3.1.229" targetFramework="net451" />
