--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Maths\BigDecimal.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Maths\BigDecimal2.cs" />
     <Compile Include="Maths\BigIntegerRange.cs" />
     <Compile Include="Maths\Class1.cs" />
     <Compile Include="Maths\RomanNumber.cs" />
@@ -391,7 +392,6 @@
     <Compile Include="Measurement\Time\Years.cs" />
     <Compile Include="Measurement\Time\Yoctoseconds.cs" />
     <Compile Include="Measurement\Time\Zeptoseconds.cs" />
-    <Compile Include="Misc\BigDecimal2.cs" />
     <Compile Include="Linguistics\Book.cs" />
     <Compile Include="Linguistics\Page.cs" />
     <Compile Include="Persistence\PersistableSettings.cs" />
