--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -71,6 +71,8 @@
     <Reference Include="MathNet.Numerics">
       <HintPath>..\Universal\packages\MathNet.Numerics.3.2.1\lib\net40\MathNet.Numerics.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\AIBrain\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
