--- a/packages.config
+++ b/packages.config
@@ -16,6 +16,7 @@
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net451" />
   <package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net451" />
   <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net451" />
+  <package id="NinjectAutoRegister" version="1.0.0" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" />
 </packages>
