--- a/Librainian.csproj
+++ b/Librainian.csproj
@@ -576,6 +576,7 @@
     <None Include="README.textile" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Computer\" />
     <Folder Include="PatternRecognition\" />
   </ItemGroup>
   <ItemGroup>
